--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
+@import '/node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+
+.thumb{
+    width: 200px;
+    height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
