--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,3 +7,239 @@
     object-fit: cover;
     object-position: center;
 }
+
+
+//VARIABLES
+
+$color-blue : #0282F9;
+$color-gray : #303030;
+
+//HEADER
+
+header{
+    .header-overline{
+        height: 30px;
+        background-color: $color-blue;
+        font-size: small;
+        text-transform: uppercase;
+        color: white;
+        font-weight: bolder;
+    }
+
+    nav{
+        height: 100px;
+        .row{
+            height: 100%;
+        }
+        .logo{
+            height: 80%;
+        }
+        ul.menu{
+            list-style: none;
+            height: 100%;
+            li{
+                display: flex;
+                align-items: center;
+                height: 100%;
+                list-style: none;
+                margin: 0 10px;
+                font-weight: 700;
+                color: gray;
+                &.active, &:hover{
+                    border-bottom: 10px $color-blue solid;
+                    border-top: 10px white solid;
+                    color: $color-blue;
+                }
+                a{
+                    text-transform: uppercase;
+                }
+                i.fa-solid{
+                    color: $color-blue;
+                }
+            }
+        }
+        .my-searchbar{
+            border-bottom: 3px $color-blue solid ;
+            .my-input{
+                border: none;
+                text-align: end;
+            }
+        }
+    }
+}
+
+a{
+    text-decoration: inherit;
+    color: inherit;
+}
+
+.fa-sort-down{
+    transform: translate(10% , -20%);
+}
+
+.jumbotron{
+    height: 400px;
+    img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: top;
+    }
+}
+
+.text-format{
+    text-transform: uppercase;
+    padding: 10px 20px;
+    color: white;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+.blue-button{
+    border: none;
+    color: white;
+    background-color: $color-blue;
+    padding: 10px 65px;
+}
+
+.blue-text{
+    color: $color-blue;
+}
+
+.content{
+    text-transform: uppercase;
+    background-color: #1c1c1c;
+    color: white;
+    .current-series{
+        width: fit-content;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: $color-blue;
+        transform: translate(0, -50%);
+    }
+    .cover-comic{
+        width: 100%;
+        height: 15vw;
+        object-fit: cover;
+        object-position: top;
+    }
+}
+
+#blue-section{
+    background-color: $color-blue;
+    color: white;
+    ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        li{
+            list-style: none;
+        }
+    }
+    .blue-section-image{
+        width: 50px;
+        height: 50px;
+        object-fit: contain;
+        object-position: center;
+    }
+}
+
+footer{
+    ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        li{
+            list-style: none;
+        }
+    }
+}
+
+#upper-footer{
+    background-image: url('../images/footer-bg.jpg');
+    background-size: cover;
+    color: gray;
+    p{
+        font-size: smaller;
+        span{
+            color: $color-blue;
+            &:hover{
+                text-decoration: $color-blue underline;
+            }
+        }
+    }
+    .custom-flex{
+        max-height: 300px;
+    }
+    .dc-bg{
+        background-image: url('../images/dc-logo-bg.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: right;
+    }
+}
+
+#lower-footer{
+    background-color: $color-gray;
+    .black-button{
+        text-transform: uppercase;
+        color: white;
+        background-color: $color-gray;
+        border: $color-blue 3px solid;
+        padding: 10px 30px;
+    }
+    h4{
+        color: $color-blue;
+    }
+    i{
+        color: #6d6d6d;
+        font-size: 30px;
+    }
+}
+
+.cover-container{
+    height: 100px;
+    position: relative;
+    img.cover{
+        position: absolute;
+        width: 175px;
+        bottom: 50%;
+    }
+}
+
+#comic-details ,#comic-info{
+    h1,h2,h3,h4,h5,h6{
+        color: #003f5e;
+    }
+}
+
+.availability{
+    background-color: #55ba59;
+    color: white;
+    button{
+        background-color: transparent;
+        border: none;
+        border-left: rgb(59, 59, 59) 1px solid;
+        color: white;
+    }
+}
+
+.comic-description{
+    line-height: 40px;
+    font-size: 18px;
+}
+
+#comic-info{
+    background-color: #f6f6f6;
+    .underline{
+        border-bottom: 1px rgba(160, 160, 160, 0.459) solid;
+        margin-bottom: 20px;
+    }
+}
+
+#menu-bot{
+    background-color: #f6f6f6;
+    border-top: 1px rgba(160, 160, 160, 0.459) solid;
+
+}
